feat: ajustei a linha abaixo do header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,7 @@ body {
 header {
   background: var(--bg-header);
   padding: 0.4rem;
+  border-bottom: 0.5px solid var(--charcoal);
 }
 
 .bg-custom {
