--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,24 +15,12 @@
   --tg-blue: #0f6fff;
   --charcoal: #13171b;
   --white: white;
-  --light-blue-2: #d6e0ef;
-  --moon-light: #f9fafb;
-  --swiper-theme-color: #007aff;
-  --swiper-navigation-size: 44px;
-  --list-bg-color: #f1efed;
-  --list-text-color-hover: #0f6fff;
-  --current-field-text-color: #0f6fff;
-  --select-field-arrow-color: #0f6fff;
-  --border-color-active: #1f232e;
-  --border-color-hover: #0f6fff;
-  --list-item-bg-color: #d6e0ef;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-aeonik: var(--font-geist-sans);
 }
 
 html.dark {
@@ -44,8 +32,17 @@ html.dark {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-family: "Poppins", sans-serif;
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+button {
+  font-family: "Nova Mono", monospace;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 header {
