--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ html.dark {
   --background: #0a0a0a;
   --foreground: #ededed;
   --bg-header: #0a0a0a;
+  --medium-gray: #626e7f;
 }
 
 body {
@@ -48,15 +49,23 @@ button {
 header {
   background: var(--bg-header);
   padding: 0.4rem;
-  border-bottom: 0.5px solid var(--charcoal);
-}
-
-.bg-custom {
-  background-color: var(--background);
+  border-bottom: 0.5px solid var(--medium-gray);
 }
 
 .text-custom {
   color: var(--foreground);
+}
+
+.logo-custom {
+  border: 0.5px solid var(--medium-gray);
+}
+
+html.dark header {
+  border-bottom: 0.5px solid var(--charcoal);
+}
+
+html.dark .logo-custom {
+  border: 0.5px solid var(--charcoal);
 }
 
 html.dark .bg-custom {
